# MY-Numerical-Operation

./: CMakeLists.txt  LICENSE  README.md
Inc/: ConsOpt.h  Heuristic_opt.h  OptCore.h  Unconstrained_opt.h  heuOpt.h  numOpt.h
Src/: ConsOpt.cpp  Heuristic_opt.cpp  Unconstrained_opt.cpp  main.cpp
autodiff/common/: eigen.hpp
autodiff/reverse/: eigen.hpp
